# GCEngine

./: .gitignore  CMakeLists.txt  README.md
document/: 项目上手与架构复盘.md
examples/: b.cpp  test.cpp  triangle.cpp
ff/camera/: camera.cpp  camera.h  orthographicCamera.cpp  orthographicCamera.h  perspectiveCamera.cpp  perspectiveCamera.h
ff/cameraControl/: cameraControl.cpp  cameraControl.h  gameCameraControl.cpp  gameCameraControl.h
ff/core/: attribute.h  geometry.cpp  geometry.h  object3D.cpp  object3D.h
ff/global/: base.h  constant.h  eventDispatcher.cpp  eventDispatcher.h
ff/lights/: directionalLight.cpp  light.cpp  light.h
ff/material/: cubeMaterial.cpp  depthMaterial.cpp  depthMaterial.h  material.cpp  material.h  meshBasicMaterial.cpp  meshBasicMaterial.h  meshPhongMaterial.cpp
ff/math/: box3.h  frustum.h  plane.h  sphere.h
ff/objects/: bone.cpp  bone.h  group.h  mesh.cpp  mesh.h  renderableObject.cpp  renderableObject.h  skeleton.cpp  skinnedMesh.cpp
ff/render/: MultipleRenderTarget.cpp  renderTarget.cpp  renderTarget.h  renderer.cpp
ff/render/driver/: driverAttributes.cpp  driverAttributes.h  driverBackground.cpp  driverBindingState.cpp  driverBindingState.h  driverGeometries.cpp  driverGeometries.h  driverInfo.cpp  driverInfo.h  driverLights.cpp  driverMaterials.cpp  driverObjects.cpp  driverObjects.h  driverPrograms.cpp  driverPrograms.h  driverRenderList.cpp  driverRenderList.h  driverRenderState.h  driverRenderTargets.cpp  driverRenderTargets.h  driverShadowMap.cpp  driverState.cpp  driverState.h  (+5 more)
ff/scene/: scene.cpp  scene.h
ff/textures/: cubeTexture.cpp  cubeTexture.h  depthTexture.cpp  depthTexture.h  source.h  texture.cpp  texture.h
ff/tools/: identity.cpp  identity.h  timer.h
ff/wrapper/: glWrapper.hpp
(+4 files in other folders)
